classic.css
/*
  1. Use a more-intuitive box-sizing model.
*/
*, *::before, *::after {
  box-sizing: border-box;
  }
  /*
  2. Remove default margin
  */
  * {
  margin: 0;
  }
  /*
  3. Allow percentage-based heights in the application
  */
  html, body {
  height: 100%;
  }
  /*
  Typographic tweaks!
  4. Add accessible line-height
  5. Improve text rendering
  */
  body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  }
  /*
  6. Improve media defaults
  */
  img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
  }
  /*
  7. Remove built-in form typography styles
  */
  input, button, textarea, select {
  font: inherit;
  }
  /*
  8. Avoid text overflows
  */
  p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
  }
  /*
  9. Create a root stacking context
  */
  #root, #__next {
  isolation: isolate;
  }

/* End of CSS Reset */

:root {
    font-family: 'Source Serif Pro', serif;
    font-size: 16px;
  font-weight: 500;
    line-height: 1.5;
    color: var(--font-clr);
    hyphens: auto;
  max-width: 800px;
  margin: auto;
  
  --cv1: #a00;
  --cv2: #ccc;
  --fst-clr-bg: #f1f5ff;
  --fst-clr-weak: #97b6f0;
    --fst-clr: #6E98E8;
    --snd-clr-weak: #ecb1a2;
    --snd-clr: #DC755C;

    --font-clr: #000;
  /*--bg-clr: #F9F4F5;*/ --bg-color: #fff;

    --hover-transition: all ease-in-out 75ms;

    --shadow-normal: rgba(0, 0, 0, 0.2) 2px 5px 10px -4px;
    --border-top-normal: 1px solid rgba(255, 255, 255, 0.1);
    --border-bottom-normal: 1px solid rgba(0, 0, 0, 0.1);
}

a {
  color: inherit;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 3px;
  text-decoration-color: rgba(0, 0, 0, 0.35);
  opacity: inherit;
  transition: var(--hover-transition);
}

a:hover {
  text-decoration-thickness: 2px;
  text-decoration-color: #696eac;
}

a:visited {
  color: inherit;
}

.links > a,
.links > a:hover,
.contact > a,
.contact > a:hover {
  text-decoration: none;
}

span {
  white-space: nowrap;
}


ul {
  margin: 0 0 0 1rem;
  padding: 0;
}

/*uncomment to get dashes in the list*/
/*li:before {
  content: "-";
  position: relative;
  left: -0.25em;
}*/

h1,h2,h3,h4, .sec-title, .topics, .info{
  font-family: 'Source Sans Pro';
}

/* .par-head, .org, .area, .role {
  
} */

h1 {
  font-size: 1.7rem;
  line-height: 2.1rem;
  font-weight: 500;
  letter-spacing: 0.15em;
}

.header {
  margin: 1rem auto;
  width: 82%;
  text-transform: uppercase;
  text-align: center;
  letter-spacing: 0.17em;
}

.title {
  margin: 3.75rem 0 0.375rem 0;
}

.info {
  font-weight: 500;
  line-height: 1.7rem;
  text-transform: uppercase;
}

.address {
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
  gap: 0.5rem;
}

.contact {
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
  gap: 1.5rem;
  margin: 0.2rem 0 1rem 0;
}

.links {
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
  gap: 1rem;
  height: 28px;
  margin: 0.2rem 0 0rem 0;
}

.links > a:hover {
  text-decoration: none;
}

.link-icon {
  height: 28px;
  width: 28px;
}

.street, .city, .phone, .email, .contact{
  white-space: nowrap;
  font-size: 95%;
}

.phone {
  font-size: 100%;
}

.statement {
    font-style: italic;
    margin: 1.5rem 1rem;
}

.section {
  margin: 1rem 1rem 2rem;
  padding-top: 0.2rem;
  border-top: 1.5px solid black;
}

.sec-title {
  font-weight: 800;
  font-size: 80%;
  letter-spacing: 1.7px;
  text-transform: uppercase;
  margin: 0.1rem 0 0.5rem 0.2rem;
}

.paragraph {
  margin: 0.8rem 0;
}

.par-head {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
  align-items: center;
}

.roles {
  display: flex;
  flex-flow: column wrap;
  align-items: start;
  font-style: italic;
}

.organization, .spacetime {
  display: flex;
  flex-flow: row wrap;
  align-items: center;
}

.spacetime {
  justify-content: flex-end;
}

.org, .area, .role, .date, .loc {
  padding: 0 0.5rem 0 0;
}

.org {
  font-weight: 500;
  font-size: 1.3rem;
}

.area {
  display: none;
  font-weight: 300;
}

.date, .loc {
  font-size: 1.2rem;
  font-weight: 500;
}

.loc {
  display: none;
}

.role {
  font-weight: 600;
  font-style: italic;
  font-size: 95%;
}

.topics {
  display: flex;
  flex-flow: row wrap;
  justify-content: flex-start;
  margin: 0.25rem 0 0 0;
  font-size: 92%;
  font-weight: 400;
}

.topic {
  margin: 0.1rem 0 0.1rem 0;
  /* padding: 0 4px 0 4px; */
  /* border-radius: 6px; */
  line-height: 1.3em;
}

.topic::after {
  font-size: 85%;
  content: "•";
  padding: 0 0.5em 0 0.5em;
}

.topic:last-child::after {
  display: none;
}

.content {
  margin: 0.5rem auto;
  width: 95%;
}

tr td:nth-child(1) {
  white-space: nowrap;
  padding: 0 0.5rem 0 0;
}


footer {
    text-align: center;
    padding: 2em;
  /* border-top: 1px solid var(--fst-clr-bg); */
    /* background-color: var(--fst-clr-bg); */

}

